<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/purple_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/movie_details_iv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_detail_height"
        android:contentDescription="@string/movie_image"
        android:src="@drawable/movie_preview"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/navigate_back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_back"
        android:padding="@dimen/margin_20dp"
        android:contentDescription="@string/navigate_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/details_title_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/margin_24dp"
        android:layout_marginTop="@dimen/margin_24dp"
        android:layout_marginEnd="@dimen/margin_12dp"
        android:fontFamily="@font/lato"
        android:text="@string/star_wars_t"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_24sp"
        app:layout_constraintEnd_toStartOf="@+id/favourite_iv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_details_iv" />

    <ImageView
        android:id="@+id/favourite_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/favorite_border"
        android:contentDescription="@string/favourite_image"
        app:layout_constraintBottom_toBottomOf="@+id/details_title_tv"
        app:layout_constraintEnd_toEndOf="@+id/line_divider1"
        app:layout_constraintTop_toTopOf="@+id/details_title_tv" />

    <TextView
        android:id="@+id/details_duration_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_150_minutes"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size_12sp"
        android:layout_marginTop="@dimen/margin_12dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/details_title_tv"
        app:drawableStartCompat="@drawable/duration"
        app:layout_constraintStart_toStartOf="@+id/details_title_tv" />

    <TextView
        android:id="@+id/details_movie_rating_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_7_0_imdb"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size_12sp"
        android:layout_marginTop="@dimen/margin_12dp"
        android:layout_marginStart="@dimen/margin_12dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/details_title_tv"
        app:drawableStartCompat="@drawable/duration"
        app:layout_constraintStart_toEndOf="@id/details_duration_tv"/>

    <View
        android:id="@+id/line_divider1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/margin_18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="@dimen/margin_24dp"
        android:background="@color/stroke_color"
        app:layout_constraintTop_toBottomOf="@id/details_movie_rating_tv" />

    <TextView
        android:id="@+id/release_date_title_tv"
        android:layout_width="wrap_content"
        android:text="@string/release_date_title"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16sp"
        android:fontFamily="@font/lato"
        android:layout_marginTop="@dimen/margin_16dp"
        app:layout_constraintTop_toBottomOf="@id/line_divider1"
        app:layout_constraintStart_toStartOf="@id/line_divider1"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/release_date_tv"
        android:layout_width="wrap_content"
        android:text="@string/release_date"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size_12sp"
        android:fontFamily="@font/lato"
        android:layout_marginTop="@dimen/margin_16dp"
        app:layout_constraintTop_toBottomOf="@id/release_date_title_tv"
        app:layout_constraintStart_toStartOf="@id/release_date_title_tv"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/genre_tv"
        android:layout_width="wrap_content"
        android:text="@string/genre"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16sp"
        android:fontFamily="@font/lato"
        android:layout_marginStart="@dimen/margin_56dp"
        android:layout_marginTop="@dimen/margin_16dp"
        app:layout_constraintTop_toBottomOf="@id/line_divider1"
        app:layout_constraintStart_toEndOf="@id/release_date_title_tv"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/genre_rv"
        android:layout_width="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/margin_24dp"
        tools:listitem="@layout/genre_rv_item"
        tools:itemCount="5"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="@id/genre_tv"
        app:layout_constraintTop_toBottomOf="@id/genre_tv"
        android:layout_height="wrap_content"/>

    <View
        android:id="@+id/line_divider2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/margin_18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="@dimen/margin_24dp"
        android:background="@color/stroke_color"
        app:layout_constraintTop_toBottomOf="@id/release_date_tv" />

    <TextView
        android:id="@+id/synopsis_tv"
        android:layout_width="wrap_content"
        android:text="@string/synopsis"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16sp"
        android:fontFamily="@font/lato"
        android:layout_marginTop="@dimen/margin_16dp"
        app:layout_constraintTop_toBottomOf="@id/line_divider2"
        app:layout_constraintStart_toStartOf="@id/line_divider2"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/synopsis_content_tv"
        android:layout_width="0dp"
        android:text="@string/synopsis_text"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size_12sp"
        android:fontFamily="@font/lato"
        android:layout_marginEnd="@dimen/margin_24dp"
        android:layout_marginTop="@dimen/margin_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/synopsis_tv"
        app:layout_constraintStart_toStartOf="@id/line_divider2"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>