<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/light_purple"
    android:id="@+id/fav_root_layout"
    app:cardCornerRadius="@dimen/radius_25dp"
    android:layout_marginHorizontal="@dimen/margin_20dp"
    android:layout_marginVertical="@dimen/margin_10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/margin_20dp"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/favourites_image_cv"
            android:layout_width="@dimen/fav_image_width"
            android:layout_height="@dimen/fav_image_height"
            android:layout_marginVertical="@dimen/margin_16dp"
            app:cardCornerRadius="@dimen/radius_10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/favourite_iv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/dummy_image" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/favourite_movie_title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginEnd="@dimen/margin_12dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:layout_marginTop="@dimen/margin_16dp"
            android:text="@string/sherlock_holmes"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16sp"
            app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
            app:layout_constraintStart_toEndOf="@id/favourites_image_cv"
            app:layout_constraintTop_toTopOf="@id/favourites_image_cv" />

        <TextView
            android:id="@+id/favourite_movie_release_date_tv"
            android:layout_width="wrap_content"
            android:text="@string/release_date"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_12sp"
            android:fontFamily="@font/lato"
            android:layout_marginTop="@dimen/margin_11dp"
            app:layout_constraintTop_toBottomOf="@id/favourite_movie_title_tv"
            app:layout_constraintStart_toStartOf="@id/favourite_movie_title_tv"
            android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/fav_rating_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/fav_rating_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_10dp"
                android:layout_marginTop="@dimen/margin_10dp"
                android:contentDescription="@string/rating"
                android:src="@drawable/rating_star"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/fav_rating_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_6dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/_4_8"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fav_rating_star" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>